--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,7 @@ description = "Minimal MPI-style runtime in pure Python"
 readme = "notes.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
